snappymail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snappymail
  labels:
    app: snappymail
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
  selector:
    app: snappymail
