snappymail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappymail
  labels:
    app: snappymail
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - post.hensen.io
      secretName: snappymail-tls
  rules:
    - host: post.hensen.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snappymail
                port:
                  number: 80
